changements package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "buildings",
   "source": "./index.html",
+  "staticFiles": {
+    "staticOutPath": "./",
+    "staticPath": "./"
+  },
   "scripts": {
     "start": "parcel --open",
     "build": "parcel build",
